[package]
name = "typer"
version = "0.1.0"
authors = ["qucumbah <sc.buher@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.6", features = ["winuser"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
